--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,6 @@
 backend:
-  name: github
-  repo: lilawilson/lilawilson.github.io
-  branch: master
-  site_domain: nissenutmeg.netlify.com
+  name: git-gateway
+
 media_folder: "/images"
 public_folder: "/images"
 collections:
