--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,7 +40,7 @@ collections:
             name: "navigation"
             widget: "list"
             fields:
-              - {label: Title, name: text, widget: string
+              - {label: Title, name: text, widget: string}
               - {label: URL, name: url, widget: url}
 
       - label: "Locations Page"
