--- a/admin/config.yml
+++ b/admin/config.yml
@@ -32,26 +32,23 @@ collections:
         fields:
           - {label: Language, name: lang, widget: hidden, default: en-US}
           - {label: Base Url, name: baseurl, widget: hidden, default: ""}
+          - {label: disqus, name: disqus, widget: hidden, default: ""}
+          
           - {label: Url, name: url, widget: hidden, default: "https://lilawilson.github.io"}
           - {label: Site Logo, name: favicon, widget: image}
           - {label: Site Title, name: title, widget: string}
           - {label: Site description, name: description, widget: text}
-          - label: "Nevigation"
+          - {label: Accent Color, name: accent-color, widget: color}
+          - label: "Footer"
+            name: "footer"
+            widget: "object"
+            collapsed: false
+            fields: 
+              - {label: "Footer Content", name: "cntent", widget: "string"}
+              - {label: "Show Social Iocns", name: "has_social", widget: "boolean"}
+          - label: "Navigation"
             name: "navigation"
             widget: "list"
             fields:
               - {label: Title, name: text, widget: string}
-              - {label: URL, name: url, widget: url}
-
-      - label: "Locations Page"
-        name: "locations"
-        file: "site/content/locations.yml"
-        fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Intro, name: intro, widget: markdown}
-          - label: Locations
-            name: locations
-            widget: list
-            fields:
-              - {label: Name, name: name, widget: string}
-              - {label: Address, name: address, widget: string}
+              - {label: URL, name: url, widget: string}
