--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,20 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site language
-lang: en-US
-
-# Site title
-title: "Nisse & Nutmeg"
-
-# A description of your site for meta tag, search engine results.
-description: "The description of the Nisse and Nutmeg site..."
-
-# The subpath of your site, e.g. /blog, for generating urls.
-baseurl: ""
-
-# The base hostname & protocol of your site for where absolute urls are needed.
-url: "https://lilawilson.github.io"
-
-# Favicon
-favicon: images/favicon.png
-
-# Google Analytics id, e.g. "UA-NNNNNNNN-N"
+accent-color: "#800000"
 google_analytics: ""
-
-# Site navigation - each item must have a title and a url.
+plugins:
+  - jekyll-paginate
+disqus: justgoodthemes
+permalink: /:title
+paginate_path: /page:num/
+sass:
+  sass_dir: _sass
+  style: compressed
+lang: en-US
+accent_color: "#800000"
+markdown: kramdown
+baseurl: ""
+url: https://lilawilson.github.io
+favicon: images/favicon.png
+description: The description of the Nisse and Nutmeg site...
 navigation:
   - text: Home
     url: /
@@ -36,34 +24,9 @@ navigation:
     url: /recipes/
   - text: Tags
     url: /tags/
-
-# The shortname for your Disqus site to enable comments.
-disqus: justgoodthemes
-
-# Colors
-accent_color: '#800000'
-
-# Site footer
+paginate: 3
+title: Nisse & Nutmeg
 footer:
   content: "&copy; Lila Wilson 2021"
   has_social: true
-
-# Plugins
-plugins:
-  - jekyll-paginate
-
-# http://jekyllrb.com/docs/pagination/
-paginate: 3
-paginate_path: '/page:num/'
-
-
-# Permalinks
-permalink: /:title
-
-# Conversion
-markdown: kramdown
-
-# Sass
-sass:
-  sass_dir: _sass
-  style: compressed
+  cntent: "&copy; 2021 Lila Wilson"
