--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 lang: en-US
 accent_color: "#800000"
 markdown: kramdown
-url: https://lilawilson.github.io
+url: https://nisseandnutmeg.netlify.app
 favicon: images/favicon.png
 description: Recipes, Recommendations, Norway, Nisse, Nutmeg & Pepper
 navigation:
